styling the main content div to match a two-column layout

--- a/main-child.scss
+++ b/main-child.scss
@@ -17,3 +17,12 @@ margin-bottom: 40px;
 border-radius: 4px;
 min-height: 220px;
 }
+
+.home.right-sidebar #content{
+	width:636px;
+	margin-right:10px;
+}
+
+
+
+
