--- a/style.css
+++ b/style.css
@@ -8,11 +8,36 @@ Template:       calsmain2013
 Version:        0.1.0
 */
 
+/*@import url("../calsmain2013/master.css");*/
+
+
 @import url("../calsmain2013/style.css");
-@import url("master-child.css");
 
 
 
 
 /* Add custom CSS Rules here */
+.single #content, .page #content, .search-results #content, .archive #content, .error404 #content, .search-no-results #content, body.home #content {
+position: relative;
+background: #fff;
+padding: 30px;
+color: #343434;
+overflow: hidden;
+box-sizing: border-box;
+-moz-box-shadow: 0px 1px 5px rgba(0,0,0,0.3);
+-webkit-box-shadow: 0px 1px 5px rgba(0,0,0,0.3);
+box-shadow: 0px 1px 5px rgba(0,0,0,0.3);
+float: left;
+width: 100%;
+margin-right: -20px;
+margin-bottom: 40px;
+-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+border-radius: 4px;
+min-height: 220px;
+}
+
+/*header.entry-header {
+	display:none;
+}*/
 
