Enlarge footer font

--- a/style.css
+++ b/style.css
@@ -41,3 +41,6 @@ min-height: 220px;
 	display:none;
 }*/
 
+body#calsblack.page div.mobileScroll footer div.ieFooter div.inner div#pre-footer div.linksContainer ul#quick_links li.quick_links_list div.menu ul li.page_item a{
+font-size:14px;
+}
