adds templates and custom js

--- a/master-child.css
+++ b/master-child.css
@@ -1,2 +1,4 @@
 .single #content,.page #content,.search-results #content,.archive #content,.error404 #content,.search-no-results #content,body.home #content{position:relative;background:#fff;padding:30px;color:#343434;overflow:hidden;box-sizing:border-box;-moz-box-shadow:0px 1px 5px rgba(0,0,0,0.3);-webkit-box-shadow:0px 1px 5px rgba(0,0,0,0.3);box-shadow:0px 1px 5px rgba(0,0,0,0.3);float:left;width:100%;margin-right:-20px;margin-bottom:40px;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;min-height:220px}.home.right-sidebar #content{width:636px;margin-right:10px}
+/*# sourceMappingURL=main-child.css.map */
  
+/*# sourceMappingURL=mobile-child.css.map */
