--- a/style.css
+++ b/style.css
@@ -59,3 +59,8 @@ body.home #secondary.widget-area ul#nav_sidebar{
 body.page-resources-2 #secondary.widget-area ul#nav_sidebar{
 	display:none;
 }
+
+/*ensure that Ajax content on front-page is displayed */
+body.page-id-533 #chairs-content{
+	display:initial;
+}
