comment out .load
rung Grunt task to update master.min.js

--- a/style.css
+++ b/style.css
@@ -11,9 +11,7 @@ Version:        0.1.0
 /*@import url("../calsmain2013/master.css");*/
 
 
-/*@import url("../calsmain2013/style.css"); */
-
-@import url("//cals.wisc.edu/wp-content/themes/calsmain2013/style.css");
+@import url("../calsmain2013/style.css");
 
 
 
