--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Template:       calsmain2013
 Version:        0.1.0
 */
 
-/*@import url("../calsmain2013/master.css");*/
+@import url("../calsmain2013/master.css");
 
 /* Add custom CSS Rules here */
 .single #content, .page #content, .search-results #content, .archive #content, .error404 #content, .search-no-results #content, body.home #content {
